--- a/_posts/2021-11-17-EduardoC12.md
+++ b/_posts/2021-11-17-EduardoC12.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Bienvenidos a la segunda página!"
 ---
-Tu texto
+Mi nombre es Eduardo Daniel Orozco Camacho y estoy empezando el curso First day on GitHub :)
 Utiliza la flecha hacia la izquierda para volver!
